@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.100 2005/03/24 08:02:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.101 2005/03/24 23:16:16 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
-  minor fix (hopefully) to livecd-kernel code
+  minor fix (hopefully) to livecd-kernel code. Removed call to mkvardb in
+  livecd-kernel code as it's now done by catalyst.
 
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added code to build_kernel() and emerge_kernel_sources() in ArchTemplate
